Added new updates and overall findings

--- a/notebook/Business_Performance.ipynb
+++ b/notebook/Business_Performance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "80e2c1ee-05e8-4f9f-b14c-ebafc316d8e2",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "17c800f3-5489-4b38-827c-86bb759772bb",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "id": "0afe8d11-f4bb-46c4-936e-501c2daab0b4",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "id": "0d8971a4-ed06-479d-bb3c-e93754b03587",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "id": "5602f7be-8e6b-4d41-ae57-2643ebca3739",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "id": "3b44a77c-da37-4381-adae-d5bb3e70d09b",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "0edad721-8966-44e0-965c-006e9678b281",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "id": "5f218f12-3f05-4207-80d8-d596c1362a9c",
    "metadata": {},
    "outputs": [],
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "id": "24c66af3-330c-4296-899e-8f2113aaeabf",
    "metadata": {},
    "outputs": [],
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "id": "782e12b0-eef4-429c-991e-10ce0c3302b8",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "id": "ae28a905-dabb-4a32-8103-2b3148cabd7d",
    "metadata": {},
    "outputs": [
@@ -319,11 +319,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "BRAZILIAN SHOPPING SEASONS PERFORMANCE:\n",
-      "------------------------------------------------------------\n",
       "SEASON               ORDERS     CUSTOMERS    ORDERS/Customer\n",
-      "------------------------------------------------------------\n",
       "Easter Season        19,236     18,949       1.02           \n",
       "Fathers Day          10,843     10,699       1.01           \n",
       "Mothers Day          10,573     10,430       1.01           \n",
@@ -366,9 +362,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "id": "975ba551-6de4-4091-93f8-0681c274c5c9",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -473,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "id": "4bfe78c5-c1de-4e55-ade4-52c0e2078fdc",
    "metadata": {},
    "outputs": [],
@@ -497,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "id": "35a34a12-2e9a-4f4b-823a-c9af5d282ab2",
    "metadata": {},
    "outputs": [
@@ -525,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "id": "0c77354b-9253-4446-a9f1-fb144eb7c1c0",
    "metadata": {},
    "outputs": [],
@@ -545,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "id": "fd193957-cf86-4c0a-aa53-bf1c88f2b296",
    "metadata": {},
    "outputs": [
@@ -554,7 +552,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "📈 REGIONAL GROWTH PATTERNS (Early vs Late Period):\n",
+      "REGIONAL GROWTH PATTERNS (Early vs Late Period):\n",
       "----------------------------------------------------------------------\n",
       "State  Early Period Late Period  Growth Rate %   Classification \n",
       "----------------------------------------------------------------------\n",
@@ -595,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 49,
    "id": "47952df9-5b5c-4b6e-a767-849d9552a395",
    "metadata": {},
    "outputs": [
@@ -660,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 50,
    "id": "b711e512-6d9c-49f0-a0be-d740bfc87e48",
    "metadata": {},
    "outputs": [
@@ -744,7 +742,12 @@
   {
    "cell_type": "markdown",
    "id": "c5ee4398-bb8e-451f-abae-a7efbf7a83c7",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "<h5>Sao Paulo leads with 41,621 orders (42%), far ahead of Rio de Janeiro (12,792, 13%) and Minas Gerais (11,591, 12%), while most other states contribute less than 6,000 orders. This shows the market is heavily concentrated in Sao Paulo, creating high dependency. To balance growth, businesses should diversify into emerging states like Paraná and other growing regions, while also addressing decline in large markets such as Rio de Janeiro. Expanding beyond São Paulo will reduce risks and capture new demand.</h5>"
    ]
@@ -759,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 51,
    "id": "00862326-e0db-4686-a3e5-fdd7a9cc47f2",
    "metadata": {},
    "outputs": [],
@@ -803,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 52,
    "id": "ce1e11f2-80e1-4b88-aac2-5fdda5ae602c",
    "metadata": {},
    "outputs": [
@@ -827,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 53,
    "id": "1211e2b9-69b0-4053-ab96-2abe8ef5022f",
    "metadata": {},
    "outputs": [],
@@ -858,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "id": "b22dc686-004f-4e37-86d8-a57515f94658",
    "metadata": {},
    "outputs": [
@@ -894,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 55,
    "id": "8e0198c2-f73b-4148-b198-f1ef8bf2dbe9",
    "metadata": {},
    "outputs": [
@@ -950,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 56,
    "id": "ed9d5f80-d906-4706-a1e9-9aec9ce6d756",
    "metadata": {},
    "outputs": [
@@ -1036,8 +1039,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "d2b5215d-f075-446d-8621-75ce27ef3209",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "## BUSINESS PERFORMANCE RECOMMENDATIONS\n",
+       "\n",
+       "### 1. Customer Retention by State\n",
+       "- **Top Performer:** AC with retention rate of **3.9%**  \n",
+       "- **Weakest Performer:** CE with retention rate of **0.9%**  \n",
+       "- **Recommendation:** Strengthen weak states with localized campaigns (loyalty discounts, free shipping).  \n",
+       "\n",
+       "### 2. Orders per Customer\n",
+       "- Average orders per customer: **1.03**  \n",
+       "- **Recommendation:** Encourage repeat purchases with cross-selling, subscriptions, and tailored promotions.  \n",
+       "\n",
+       "### 3. Emerging States with New Customer Growth\n",
+       "- SP: **40181 new customers**  \n",
+       "- RJ: **12325 new customers**  \n",
+       "- MG: **11217 new customers**  \n",
+       "- **Recommendation:** Invest in marketing and logistics to capture momentum in these states.  \n",
+       "\n",
+       "### 4. Underperforming States\n",
+       "- SE: retention **1.2%**, only **337 new customers**  \n",
+       "- **Recommendation:** Evaluate ROI in these states. If strategic, improve infrastructure/logistics; if not, prioritize higher-performing markets.  \n",
+       "\n",
+       "### 5. Strategic Outlook\n",
+       "- Retention improvements (even +5–10%) can significantly boost revenue without extra acquisition cost.  \n",
+       "- Focus on **emerging states** for growth while addressing **underperforming states** strategically.  \n",
+       "- Apply segmentation (e.g., RFM analysis) to sharpen retention and acquisition efforts.  \n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import display, Markdown\n",
+    "\n",
+    "report = \"## BUSINESS PERFORMANCE RECOMMENDATIONS\\n\\n\"\n",
+    "\n",
+    "# --- 1. Customer Retention by State ---\n",
+    "# Retention: unique customers who returned in consecutive months (m0->m1)\n",
+    "cohort = business_df.groupby(['customer_unique_id', 'order_year_month', 'customer_state'])['order_id'].nunique().reset_index()\n",
+    "\n",
+    "# Mark customers' first purchase per state\n",
+    "cohort['first_purchase'] = cohort.groupby(['customer_unique_id', 'customer_state'])['order_year_month'].transform('min')\n",
+    "\n",
+    "# Retained if they purchased again after first_purchase\n",
+    "retention = cohort.groupby('customer_state').apply(\n",
+    "    lambda g: (g[g['order_year_month'] > g['first_purchase']]['customer_unique_id'].nunique() /\n",
+    "               g['customer_unique_id'].nunique()) if g['customer_unique_id'].nunique() > 0 else 0\n",
+    ").reset_index(name='retention_rate')\n",
+    "\n",
+    "retention_sorted = retention.sort_values('retention_rate', ascending=False)\n",
+    "best_state = retention_sorted.iloc[0]\n",
+    "worst_state = retention_sorted.iloc[-1]\n",
+    "\n",
+    "report += \"### 1. Customer Retention by State\\n\"\n",
+    "report += f\"- **Top Performer:** {best_state['customer_state']} with retention rate of **{best_state['retention_rate']:.1%}**  \\n\"\n",
+    "report += f\"- **Weakest Performer:** {worst_state['customer_state']} with retention rate of **{worst_state['retention_rate']:.1%}**  \\n\"\n",
+    "report += \"- **Recommendation:** Strengthen weak states with localized campaigns (loyalty discounts, free shipping).  \\n\\n\"\n",
+    "\n",
+    "# --- 2. Orders per Customer ---\n",
+    "orders_per_customer = business_df.groupby('customer_unique_id')['order_id'].nunique().mean()\n",
+    "report += \"### 2. Orders per Customer\\n\"\n",
+    "report += f\"- Average orders per customer: **{orders_per_customer:.2f}**  \\n\"\n",
+    "report += \"- **Recommendation:** Encourage repeat purchases with cross-selling, subscriptions, and tailored promotions.  \\n\\n\"\n",
+    "\n",
+    "# --- 3. Emerging States (growth in new customers) ---\n",
+    "first_orders = business_df.groupby(['customer_unique_id'])['order_year_month'].min().reset_index()\n",
+    "first_orders = first_orders.merge(business_df[['customer_unique_id','customer_state']], on='customer_unique_id', how='left').drop_duplicates('customer_unique_id')\n",
+    "\n",
+    "state_new_customers = first_orders.groupby('customer_state')['customer_unique_id'].nunique().reset_index(name='new_customers')\n",
+    "emerging_states = state_new_customers.sort_values('new_customers', ascending=False).head(3)\n",
+    "\n",
+    "report += \"### 3. Emerging States with New Customer Growth\\n\"\n",
+    "for _, row in emerging_states.iterrows():\n",
+    "    report += f\"- {row['customer_state']}: **{row['new_customers']} new customers**  \\n\"\n",
+    "report += \"- **Recommendation:** Invest in marketing and logistics to capture momentum in these states.  \\n\\n\"\n",
+    "\n",
+    "# --- 4. Underperforming States (low retention + low new customers) ---\n",
+    "low_retention_threshold = retention['retention_rate'].quantile(0.25)\n",
+    "low_new_threshold = state_new_customers['new_customers'].quantile(0.25)\n",
+    "\n",
+    "underperforming = retention.merge(state_new_customers, on='customer_state')\n",
+    "underperforming = underperforming[\n",
+    "    (underperforming['retention_rate'] <= low_retention_threshold) &\n",
+    "    (underperforming['new_customers'] <= low_new_threshold)\n",
+    "].sort_values('retention_rate')\n",
+    "\n",
+    "report += \"### 4. Underperforming States\\n\"\n",
+    "if not underperforming.empty:\n",
+    "    for _, row in underperforming.iterrows():\n",
+    "        report += f\"- {row['customer_state']}: retention **{row['retention_rate']:.1%}**, only **{row['new_customers']} new customers**  \\n\"\n",
+    "    report += \"- **Recommendation:** Evaluate ROI in these states. If strategic, improve infrastructure/logistics; if not, prioritize higher-performing markets.  \\n\\n\"\n",
+    "else:\n",
+    "    report += \"- No critically underperforming states detected.  \\n\\n\"\n",
+    "\n",
+    "# --- 5. Strategic Outlook ---\n",
+    "report += \"### 5. Strategic Outlook\\n\"\n",
+    "report += \"- Retention improvements (even +5–10%) can significantly boost revenue without extra acquisition cost.  \\n\"\n",
+    "report += \"- Focus on **emerging states** for growth while addressing **underperforming states** strategically.  \\n\"\n",
+    "report += \"- Apply segmentation (e.g., RFM analysis) to sharpen retention and acquisition efforts.  \\n\"\n",
+    "\n",
+    "display(Markdown(report))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f35f71ca-d359-4e14-bb50-ca51c50ca38c",
    "metadata": {},
    "outputs": [],
    "source": []
